--- a/dg-example-default/pom.xml
+++ b/dg-example-default/pom.xml
@@ -10,6 +10,25 @@
     <artifactId>dg-example-default</artifactId>
     <name>Data Generator Example - Default Distributor</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.finra.datagenerator.samples.CmdLine</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.finra.datagenerator</groupId>
@@ -17,5 +36,4 @@
             <version>2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
